fixing top banner on mobile

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
     
     .max-width {
         max-width: 600px;
-        padding: 10px 0;
+        padding: 7px 0;
         margin: auto;
     }
     
